--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "use-media": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
